--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,6 +137,9 @@ services:
     restart: unless-stopped
     env_file:
       - ${ENV_FILE:-env.local}
+    environment:
+      VITE_API_URL: ${VITE_API_URL:-http://localhost:8000}
+      PW_COVERAGE: ${PW_COVERAGE:-false}
     volumes:
       - ./health_check.py:/health_check.py:ro
       - ./frontend-user/src:/app/src
@@ -165,6 +168,9 @@ services:
     restart: unless-stopped
     env_file:
       - ${ENV_FILE:-env.local}
+    environment:
+      VITE_API_URL: ${VITE_API_URL:-http://localhost:8000}
+      PW_COVERAGE: ${PW_COVERAGE:-false}
     volumes:
       - ./health_check.py:/health_check.py:ro
       - ./frontend-admin/src:/app/src
@@ -211,11 +217,44 @@ services:
       - bedrock_network
     restart: unless-stopped
 
+  loki:
+    image: grafana/loki:2.9.4
+    container_name: bedrock_loki
+    ports:
+      - "3100:3100"
+    command:
+      - "-config.file=/etc/loki/loki.yml"
+    volumes:
+      - ./loki/loki.yml:/etc/loki/loki.yml:ro
+      - loki_data:/loki
+    networks:
+      - bedrock_network
+    restart: unless-stopped
+
+  promtail:
+    image: grafana/promtail:2.9.4
+    container_name: bedrock_promtail
+    command:
+      - "-config.file=/etc/promtail/promtail.yml"
+    volumes:
+      - ./promtail/promtail.yml:/etc/promtail/promtail.yml:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - promtail_positions:/tmp
+    depends_on:
+      loki:
+        condition: service_started
+    networks:
+      - bedrock_network
+    restart: unless-stopped
+
 volumes:
   mongodb_data:
   rabbitmq_data:
   prometheus_data:
   grafana_data:
+  loki_data:
+  promtail_positions:
 
 networks:
   bedrock_network:
