--- a/env.example
+++ b/env.example
@@ -4,7 +4,7 @@ RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672//
 API_HOST=0.0.0.0
 API_PORT=8000
 WORKER_METRICS_PORT=8001
-CORS_ORIGINS=http://localhost:5173,http://localhost:5174
+CORS_ORIGINS=http://localhost:5173,http://localhost:5174,http://bedrock_frontend_user:5173,http://bedrock_frontend_admin:5174
 JWT_SECRET_KEY=dev-secret-change-me
 JWT_ALGORITHM=HS256
 JWT_ACCESS_TOKEN_EXPIRE_MINUTES=15
