Make env defaults safer

--- a/env.example
+++ b/env.example
@@ -1,17 +1,29 @@
 MONGODB_URL=mongodb://mongodb:27017
 MONGODB_DB_NAME=bedrock
+MONGODB_PORT=27017
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672//
+RABBITMQ_DEFAULT_USER=guest
+RABBITMQ_DEFAULT_PASS=guest
+RABBITMQ_PORT=5672
+RABBITMQ_MANAGEMENT_PORT=15672
 API_HOST=0.0.0.0
 API_PORT=8000
 WORKER_METRICS_PORT=8001
+FRONTEND_USER_PORT=5173
+FRONTEND_ADMIN_PORT=5174
+PROMETHEUS_PORT=9090
+GRAFANA_PORT=3000
+LOKI_PORT=3100
 CORS_ORIGINS=http://localhost:5173,http://localhost:5174,http://bedrock_frontend_user:5173,http://bedrock_frontend_admin:5174
-JWT_SECRET_KEY=dev-secret-change-me
+JWT_SECRET_KEY=change-me
 JWT_ALGORITHM=HS256
 JWT_ACCESS_TOKEN_EXPIRE_MINUTES=15
 JWT_REFRESH_TOKEN_EXPIRE_DAYS=30
 ADMIN_DEFAULT_EMAIL=admin@example.com
 ADMIN_DEFAULT_NAME=Admin
-ADMIN_DEFAULT_PASSWORD=admin1234
+ADMIN_DEFAULT_PASSWORD=change-me
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=admin
 FILE_STORAGE_TYPE=local
 FILE_STORAGE_PATH=storage/uploads
 S3_BUCKET_NAME=
