--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     image: mongo:7
     container_name: bedrock_mongodb
     ports:
-      - "27017:27017"
+      - "${MONGODB_PORT:-27017}:27017"
     healthcheck:
       test: ["CMD-SHELL", "mongosh --quiet --eval \"db.adminCommand({ ping: 1 })\" || exit 1"]
       interval: 10s
@@ -25,8 +25,8 @@ services:
     image: rabbitmq:3-management
     container_name: bedrock_rabbitmq
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - "${RABBITMQ_PORT:-5672}:5672"
+      - "${RABBITMQ_MANAGEMENT_PORT:-15672}:15672"
     healthcheck:
       test: ["CMD-SHELL", "rabbitmq-diagnostics -q ping"]
       interval: 10s
@@ -34,8 +34,8 @@ services:
       retries: 6
     restart: unless-stopped
     environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER:-guest}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS:-guest}
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     networks:
@@ -47,7 +47,7 @@ services:
       dockerfile: Dockerfile
     container_name: bedrock_backend
     ports:
-      - "8000:8000"
+      - "${API_PORT:-8000}:8000"
     healthcheck:
       test: ["CMD", "python3", "/health_check.py", "http://localhost:8000/api/health"]
       interval: 10s
@@ -79,7 +79,7 @@ services:
     container_name: bedrock_worker
     command: celery -A src.worker.celery worker --loglevel=info
     ports:
-      - "8001:8001"
+      - "${WORKER_METRICS_PORT:-8001}:8001"
     env_file:
       - ${ENV_FILE:-env.local}
     volumes:
@@ -128,7 +128,7 @@ services:
         VITE_API_URL: ${VITE_API_URL:-http://localhost:8000}
     container_name: bedrock_frontend_user
     ports:
-      - "5173:5173"
+      - "${FRONTEND_USER_PORT:-5173}:5173"
     healthcheck:
       test: ["CMD", "python3", "/health_check.py", "http://localhost:5173/"]
       interval: 10s
@@ -159,7 +159,7 @@ services:
         VITE_API_URL: ${VITE_API_URL:-http://localhost:8000}
     container_name: bedrock_frontend_admin
     ports:
-      - "5174:5174"
+      - "${FRONTEND_ADMIN_PORT:-5174}:5174"
     healthcheck:
       test: ["CMD", "python3", "/health_check.py", "http://localhost:5174/login"]
       interval: 10s
@@ -186,7 +186,7 @@ services:
     image: prom/prometheus:latest
     container_name: bedrock_prometheus
     ports:
-      - "9090:9090"
+      - "${PROMETHEUS_PORT:-9090}:9090"
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - ./prometheus/alerts.yml:/etc/prometheus/alerts.yml
@@ -202,10 +202,10 @@ services:
     image: grafana/grafana:latest
     container_name: bedrock_grafana
     ports:
-      - "3000:3000"
+      - "${GRAFANA_PORT:-3000}:3000"
     environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
     volumes:
       - grafana_data:/var/lib/grafana
@@ -221,7 +221,7 @@ services:
     image: grafana/loki:2.9.4
     container_name: bedrock_loki
     ports:
-      - "3100:3100"
+      - "${LOKI_PORT:-3100}:3100"
     command:
       - "-config.file=/etc/loki/loki.yml"
     volumes:
